--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -2,7 +2,7 @@ name: ecm-backend CI
 on:
   push:
     branches: [master]
-  pull_requests:
+  pull_request:
     branches: [master]
 jobs:
   build:
